<resources>
    <string name="app_name">MadridistaApp</string>
    <string name="welcome">Welcome,</string>
    <string name="welcome_2">Welcome</string>
    <string name="madridista">madridista</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="hello">Hello there!</string>
    <string name="signIn">Sign In to continue</string>
    <string name="signUp">Sign Up to start</string>
    <string name="username_hint">Username</string>
    <string name="feedback_hint">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter">Enter</string>
    <string name="next">Next</string>
    <string name="heading1">Madridista app</string>
    <string name="heading2">Enjoy being Madridista</string>
    <string name="first_slide_desc">This application was created for the convenience of all Real Madrid fans. Our goal is to keep up to date with the latest news and expand our large Madridista family around the world</string>
    <string name="second_slide_desc">Support our club with us, enjoy best moments and become a true Madridista</string>
    <string name="sign_up_reg">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="go">GO</string>
    <string name="already">Already have an account? LogIn</string>
    <string name="wallet">123$</string>
    <string name="balance">Balance</string>
    <string name="booking">Booking</string>
    <string name="update">Update</string>
    <string name="verify_num">Verify Phone Number</string>
    <string name="enter_verify_num">Enter verification code if not automatically authenticated</string>
    <string name="verify_hint">Enter OTP</string>
    <string name="user_profile">User Profile</string>
    <string name="club_info">We are Real Madrid</string>
    <string name="team_info">Our team</string>
    <string name="hala_madrid">¡Hala Madrid!</string>
    <string name="visit_website">Want to join to Madridista family? Visit official website and request your card</string>
    <string name="visit_news">Stay up to date with the latest news</string>
    <string name="visit_social_media">Keep in touch with Real Madrid social media</string>
    <string name="quiz">Real Madrid Quiz</string>
    <string name="music">Real Madrid anthem</string>
    <string name="support">Support</string>
    <string name="real_madrid_web">Real Madrid Web Community</string>
    <string name="feedback">Give us a feedback</string>
    <string name="slogan">Hasta el Final Vamos Real!</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="quizSlogan">My Real Madrid Quiz</string>
    <string name="highscore_start">Highscore: 0</string>
    <string name="score_0">Score: 0</string>
    <string name="quiz_start">Start Quiz</string>
    <string name="question_score">Question: 1/x</string>
    <string name="time_counter">00:30</string>
    <string name="confirm">Confirm</string>
    <string name="real_madrid_quiz">Real Madrid Quiz</string>
    <string name="question1">When did Real Madrid founded?</string>
    <string name="option1_1">1901</string>
    <string name="option1_2">1902</string>
    <string name="option1_3">1900</string>
    <string name="option1_4">1905</string>
    <string name="feedback_thank_you">Thank you for your feedback!</string>
</resources>