<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_madridlogo"
        android:transitionName="logo_image"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:transitionName="logo_text"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:text="@string/new_user"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"/>

    </LinearLayout>
</LinearLayout>