<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_madridlogo"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:transitionName="logo_image"/>

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/blue"
        android:transitionName="logo_text"/>
    <TextView
        android:id="@+id/tvSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/blue"
        android:transitionName="sign"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            android:transitionName="user_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:transitionName="user_tran"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            android:transitionName="pass_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:transitionName="pass_tran"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:backgroundTint="@color/blue"
        android:transitionName="enter_tran"/>
    <Button
        android:id="@+id/btnToLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textSize="15sp"
        android:backgroundTint="@color/blue"
        android:transitionName="sign_tran"/>
</LinearLayout>