<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_2"
    tools:context=".quiz.StartingScreenQuizActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizSlogan"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_bw"/>

    <TextView
        android:id="@+id/tvHighscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_start"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/quiz_start"
        android:textSize="15sp"/>

</LinearLayout>