<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logoImageForgotActivity"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_madrid_logo"
        android:transitionName="logo_image"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/logoNameReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:transitionName="logo_text"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif"
        android:transitionName="reset"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:transitionName="email_tran">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="reset"
            android:text="@string/reset_password"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">
        </ProgressBar>

    </LinearLayout>
</LinearLayout>