<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/QuizBackgroundColor"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tvQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvScore"
        android:text="@string/question_score"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tvCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_counter"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Here is the question"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_above="@+id/radio_group"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 1"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"/>
        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 2"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"/>
        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 3"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="20dp"/>

</RelativeLayout>